[package]
name = "orpheus"
version = "0.0.2"
description = "Orpheus music player"
authors = [ "112RG" ]
license = ""
repository = ""
default-run = "orpheus"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }
[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.4.1", features = [ "updater", "api-all"] }
tauri-plugin-window-state = "0.1"
tauri-plugin-localhost = "0.1.0"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

portpicker = "0.1"
window-shadows = "0.2.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
# Disable for now
#[profile.release]
#panic = "abort" # Strip expensive panic clean-up logic
#codegen-units = 1 # Compile crates one after another so the compiler can optimize better
#lto = true # Enables link to optimizations
#opt-level = "s" # Optimize for binary size
